--- a/GCard/payment/templates/payment/product_detail.html
+++ b/GCard/payment/templates/payment/product_detail.html
@@ -5,8 +5,23 @@
         </title>
         {% load static %}
         <link href="{% static 'css/detail.css' %}" rel="stylesheet">
+        <link href="{% static 'css/menu.css' %}" rel="stylesheet">
+		<link rel="stylesheet" href="{% static 'css/font.css'%} ">
         <script src="{% static 'js/detail.js' %}"></script>
     </head>
+	<header>
+	 <div class="topnav" id="myTopnav">
+	  <a href="{% url 'home' %}"><i class="fa fa-home">&nbsp &nbsp Home &nbsp &nbsp</i></a>
+	  {% if request.user.is_authenticated %}
+	  <a href="{% url 'add_balance' %}"><i class="fa fa-plus">&nbsp &nbsp Add Balance &nbsp &nbsp</i></a>
+	  <a href="{% url 'add_balance' %}"><i class="fa fa-money">&nbsp &nbsp <strong>Balance:&nbsp </strong>{{request.user.card.balance}} TL  &nbsp &nbsp</i></a>
+	  <a class="dropdown" onclick="onayla()" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp {{ request.user.username }}'s Account<div class="dropdown-content">{{ request.user.card.digits }}</div>&nbsp &nbsp </i>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a>
+	  {% else %}
+	  <a href="{% url 'login' %}"><i class="fa fa-key">&nbsp &nbsp Login &nbsp &nbsp </i></a>
+	  <a href="{% url 'register' %}" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp Register &nbsp &nbsp </i></a>
+	  {% endif %}
+	</div> 
+	</header>
 	<div class="product">
 	  <div class="header">
 		<div class="back" onclick="window.open('/')"></div>
