--- a/GCard/payment/templates/payment/card_add_balance_form.html
+++ b/GCard/payment/templates/payment/card_add_balance_form.html
@@ -30,7 +30,7 @@
 	<div class="desc">
 		<center>
 		<h1>GCARD ~ EW2C</h1>
-		<p><i class="fa fa-charge">Log<strong>in</strong></i></p>
+		<p><i class="fa fa-charge">Add<strong>Balance</strong></i></p>
 	</center>
 	</div>
 	<div class="content">
