--- a/GCard/payment/templates/payment/signup.html
+++ b/GCard/payment/templates/payment/signup.html
@@ -19,7 +19,8 @@
   <a href="{% url 'home' %}"><i class="fa fa-home">&nbsp &nbsp Home &nbsp &nbsp</i></a>
   {% if request.user.is_authenticated %}
   <a href="{% url 'add_balance' %}"><i class="fa fa-plus">&nbsp &nbsp Add Balance &nbsp &nbsp</i></a>
-  <a href="{% url 'add_balance' %}"><i class="fa fa-money">&nbsp &nbsp <strong>Balance:&nbsp </strong>{{request.user.card.balance}}TL  &nbsp &nbsp</i></a>
+  <a href="{% url 'add_balance' %}"><i class="fa fa-money">&nbsp &nbsp <strong>Balance:&nbsp </strong>{{request.user.card.balance}} TL  &nbsp &nbsp</i></a>
+  <a href="{% url 'transaction' pk=request.user.card.pk %}"><i class="fa fa-list">&nbsp &nbsp Transactions &nbsp &nbsp</i></a>
   <a class="dropdown" onclick="onayla()" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp {{ request.user.username }}'s Account<div class="dropdown-content">{{ request.user.card.digits }}</div>&nbsp &nbsp </i>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a>
   {% else %}
   <a href="{% url 'login' %}"><i class="fa fa-key">&nbsp &nbsp Login &nbsp &nbsp </i></a>
@@ -32,7 +33,7 @@
 	<div class="desc">
 		<center>
 		<h1>GCARD ~ EW2C</h1>
-		<p><i class="fa fa-charge">Log<strong>in</strong></i></p>
+		<p><i class="fa fa-charge">Sig<strong>in</strong></i></p>
 	</center>
 	</div>
 	<div class="content">
