--- a/GCard/templates/registration/login.html
+++ b/GCard/templates/registration/login.html
@@ -86,9 +86,10 @@ input {
  <div class="topnav" id="myTopnav">
   <a href="{% url 'home' %}"><i class="fa fa-home">&nbsp &nbsp Home &nbsp &nbsp</i></a>
   {% if request.user.is_authenticated %}
-  <a href="{% url 'add_request.user.card.digits' %}"><i class="fa fa-plus">&nbsp &nbsp Add request.user.card.digits &nbsp &nbsp</i></a>
-  <a href="{% url 'add_request.user.card.digits' %}"><i class="fa fa-money">&nbsp &nbsp <strong>request.user.card.digits:&nbsp </strong>{{request.user.card.request.user.card.digits}}TL  &nbsp &nbsp</i></a>
-  <a class="dropdown" onclick="onayla()" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp {{ request.user.username }}'s Account<div class="dropdown-content">{{ request.user.card.digits }} }}</div>&nbsp &nbsp </i>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a>
+  <a href="{% url 'add_balance' %}"><i class="fa fa-plus">&nbsp &nbsp Add Balance &nbsp &nbsp</i></a>
+  <a href="{% url 'add_balance' %}"><i class="fa fa-money">&nbsp &nbsp <strong>Balance:&nbsp </strong>{{request.user.card.balance}} TL  &nbsp &nbsp</i></a>
+  <a href="{% url 'transaction' pk=request.user.card.pk %}"><i class="fa fa-list">&nbsp &nbsp Transactions &nbsp &nbsp</i></a>
+  <a class="dropdown" onclick="onayla()" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp {{ request.user.username }}'s Account<div class="dropdown-content">{{ request.user.card.digits }}</div>&nbsp &nbsp </i>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a>
   {% else %}
   <a href="{% url 'login' %}"><i class="fa fa-key">&nbsp &nbsp Login &nbsp &nbsp </i></a>
   <a href="{% url 'register' %}" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp Register &nbsp &nbsp </i></a>
