--- a/GCard/payment/templates/payment/buy.html
+++ b/GCard/payment/templates/payment/buy.html
@@ -28,25 +28,72 @@
 <body translate="no" onload="myFunction()" >
     <div class="wrapper">
 	<div class="desc">
+		<center>
 		<h1>GCARD ~ EW2C</h1>
-		<p><i class="fa fa-charge">Buy a<strong>Product</strong></i></p>
+		<p><i class="fa fa-charge">Buy a <strong>Product</strong></i></p>
+	</center>
 	</div>
 	<div class="content">
-		<!-- content here -->
-        <center>
 		<div class="product-grid product-grid--flexbox">
-			<div class="product-grid__wrapper">
-				<form action="." method="POST">
+			<div class="product-grid__wrapper">				
+			<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<h3><center>Most Sold<center></h3>
+						<div class="product-grid__img-wrapper">			
+							<img src="https://images.hepsiburada.net/assets/Bilgisayar/500/9607402586162.jpg" alt="Dell Alienware" class="product-grid__img" />
+						</div>
+						<span class="product-grid__title">Dell Alienware</span>
+						<span class="product-grid__price">7999 TL</span>
+						<div class="product-grid__extend-wrapper">
+							<div class="product-grid__extend">
+								<p class="product-grid__description">Intel Core i7 7700HQ 16GB 1TB + 256GB SSD GTX1070 Windows 10 Home 17.3&quot; FHD Taşınabilir Bilgisayar AW17-8B7700W161256</p>
+								<a href="/detail/1/"><span class="product-grid__btn product-grid__add-to-cart"><i class="fa fa-cart-arrow-down"></i>Buy</span></a>				
+								<a href="/detail/1/"></a><span class="product-grid__btn product-grid__view"><i class="fa fa-eye"></i>Detail Page</span></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<form action="." method="POST">
 				{% csrf_token %}
 				{{form.as_p}}
-				<button type="submit">Buy</button>
-                </form></div></div>
+				<button type="submit">Save</button>
+                </form>
+					</div>
+				</div>
+				
+			<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<h3><center>Most Viewed<center></h3>
+						<div class="product-grid__img-wrapper">			
+							<img src="https://images.hepsiburada.net/assets/Bilgisayar/500/9604470079538.jpg" alt="Msi Ge62 7rd(Apache)-840xtr" class="product-grid__img" />
+						</div>
+						<span class="product-grid__title">Msi Ge62 7rd(Apache)-840xtr</span>
+						<span class="product-grid__price">5000 TL</span>
+						<div class="product-grid__extend-wrapper">
+							<div class="product-grid__extend">
+								<p class="product-grid__description">Intel Core i7 7700HQ 8GB 1TB + 128GB SSD GTX1050 Freedos 15.6&quot; FHD Taşınabilir Bilgisayar</p>
+								<a href="/detail/2/"><span class="product-grid__btn product-grid__add-to-cart"><i class="fa fa-cart-arrow-down"></i>Buy</span></a>				
+								<a href="/detail/2/"></a><span class="product-grid__btn product-grid__view"><i class="fa fa-eye"></i>Detail Page</span></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				</div>
             </center>
             </body>
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script>
-	function myFunction(){document.body.innerHTML = document.body.innerHTML.replace('Card digits:', 'Main Card ID <br>');}
+	function myFunction(){
+		document.body.innerHTML = document.body.innerHTML.replace('Card digits:', 'Main Card ID <br>');
+		document.body.innerHTML = document.body.innerHTML.replace('Precard digits:', 'Pre Card ID <br>');
+		}
+  </script>
+<script>
+     function onayla(){x = "{% url 'logout' %}";if(confirm("Are You Want {{ request.user.username }} Named Account?")){window.open(x+"?next=/");}}
   </script>
 </html>
 </body>
