--- a/GCard/payment/templates/payment/home.html
+++ b/GCard/payment/templates/payment/home.html
@@ -40,9 +40,9 @@
 				<div class="product-grid__product-wrapper">
 					<div class="product-grid__product">
 						<div class="product-grid__img-wrapper">			
-							<img src="{{ obj.image }}" alt="{{obj.title|title}}" class="product-grid__img" />
+							<img src="{{ obj.image }}" alt="{{obj.title}}" class="product-grid__img" />
 						</div>
-						<span class="product-grid__title">{{obj.title|title}}</span>
+						<span class="product-grid__title">{{obj.title}}</span>
 						<span class="product-grid__price">{{obj.price}} TL</span>
 						<div class="product-grid__extend-wrapper">
 							<div class="product-grid__extend">
